Дбивала блок-схему и примечания к Bubble

--- a/Sorts.html
+++ b/Sorts.html
@@ -7,9 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 align="center">Сортировка массива</h1>
     <ul>
         <li>
-            <p>Сортировка Пузырьком</p>
+            <h2>Сортировка Пузырьком</h2>
+            <p>Примечание: по данному коду сортировка осуществляется от меньшего к большему</p>
+            <h2>Блок схема</h2>
+            <img src="img/bubble.png" alt="">
+            <h2>Код</h2>
             <code>
                 Random r = new Random();<br>
                 int n = 10;<br>
