--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Польза для написания кода на C#</title>
+    <title>Курс по C#</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">Польза для написания кода на C#</h1>
-    <a href="Sorts.html"><h2>1. Сортировки массива</h2></a>
+    <h1 align="center">Курс по C#</h1>
+    <a href="type.html"><h2>1. Типы данных</h2></a>
+    <a href="workconsole.html"><h2>2. Работы с консолью | Оформление консоли</h2></a>
+    <a href="ups.html"><h2>3. УПС (управляющие последовательности символов)</h2></a>
+    <a href="arif.html"><h2>4. Арифметические операции |  Логические операции</h2></a>
+    <a href="math.html"><h2>5. Матиматические вычесления</h2></a>
+    <a href="operation.html"><h2>6. Операторы (в разработке)</h2></a>
+    <a href="massiv.html"><h2>7. Все о массиве (в разработке)</h2></a>
+    <a href="Sorts.html"><h2>8. Сортировки массива</h2></a>
+    <a href=""><h2>9.</h2></a>
+    <a href=""><h2>10.</h2></a>
 </body>
 </html>
