--- a/Sorts.html
+++ b/Sorts.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Сортировка</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 align="center">Сортировка массива</h1>
@@ -93,5 +94,12 @@
             </code>
         </li>
     </ul>
+    <footer>
+        <a href="index.html">
+            <div class="exit">
+                ВЕРНУТЬСЯ НА ГЛАВНУЮ
+            </div>
+        </a>
+    </footer>
 </body>
 </html>
