--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <a href="ups.html"><h2>3. УПС (управляющие последовательности символов)</h2></a>
     <a href="arif.html"><h2>4. Арифметические операции |  Логические операции</h2></a>
     <a href="math.html"><h2>5. Матиматические вычесления</h2></a>
-    <a href="operation.html"><h2>6. Операторы (в разработке)</h2></a>
-    <a href="massiv.html"><h2>7. Все о массиве (в разработке)</h2></a>
-    <a href="Sorts.html"><h2>8. Сортировки массива</h2></a>
-    <a href=""><h2>9.</h2></a>
+    <a href="operation.html"><h2>6. Операторы</h2></a>
+    <a href="massiv.html"><h2>7. Все о массиве</h2></a>
+    <a href="random.html"><h2>8. Рандомные числа</h2></a>
+    <a href="Sorts.html"><h2>9. Сортировки массива</h2></a>
     <a href=""><h2>10.</h2></a>
 </body>
 </html>
