--- a/operation.html
+++ b/operation.html
@@ -9,6 +9,101 @@
 </head>
 <body>
     <h1 align="center">Операторы</h1>
+    <h2>Условный оператор If Else</h2>
+    <pre>
+        if(условие){
+            действие
+        }
+        if else(условие){
+            действие
+        }
+        else(условие){
+            действие
+        }
+    </pre>
+    <hr>
+    <h2>Оператор множественного выбора SWITCH</h2>
+    <p>
+        <pre>
+            switch (переключатель) {
+                case значение 1:
+                    инструкция 1;
+                    break;
+                case значение 2:
+                    инструкция 2;
+                    break;
+                ...
+                defualt:
+                    инструкция_по_умолчанию;
+                    break;
+            }
+        </pre>
+    </p>
+    <p>break - выход из определенного условия</p>
+    <hr>
+    <h2>Циклические операторы</h2>
+    <p>
+        <i>Цикл</i> - многократное повторение одного и того же участка программы, пока заданное условие не станет ложным.
+    </p>
+    <p>
+        Существует два типа циклов: типа "пока" и типа "n-раз".
+    </p>
+    <p>
+        Первый тип "пока" предназначен для повторения некоторых действий до тех по, пока выполняется некоторое условие.
+    </p>
+    <p>Второй тип "n-раз" предназначен для повторений некоторых действий зарание известное кол-во раз.</p>
+    <h3>FOR</h3>
+    <p>Оператор for содержит три параментра</p>
+    <p>1. Название инициализации</p>
+    <p>2. Условие повторения</p>
+    <p>3. Интерацию</p>
+    <pre>
+        for(инициализация; условие; интерация){
+            тело цикла
+        }
+    </pre>
+    <p>Пример:</p>
+    <pre>
+        for(int i = 0; i <=10; i++){
+            Console.WriteLine(i);
+        }
+    </pre>
+    <p>инициализация - объявление и описание переменной</p>
+    <div class="op">
+        <div class="while">
+            <h3>WHILE</h3>
+        <pre>
+            while(условие_истинно){
+                операторы
+            }
+        </pre>
+        <p>Пример:</p>
+        <pre>
+            int i = 1;
+            while(i <= 10){
+                Console.WriteLine(i);
+                i++
+            }
+        </pre>
+        </div>
+        <div class="do-while">
+            <h3>DO WHILE</h3>
+            <pre>
+                do{
+                    операторы
+                }while(условие_истинно)
+            </pre>
+            <p>Пример:</p>
+            <pre>
+                int i = 1;
+                do{
+                    Console.WriteLine(i);
+                    i--
+                }while(i > 0)
+            </pre>
+            <p>do while выполниться хотя бы один раз</p>
+        </div>
+    </div>
     <footer>
         <a href="index.html">
             <div class="exit">
