--- a/massiv.html
+++ b/massiv.html
@@ -9,6 +9,29 @@
 </head>
 <body>
     <h1 align="center">Все о массиве</h1>
+    <p><b>Массив</b> предоставляет собой совокупность переменных одного типа с обшим для обращения к ним именем.</p>
+    <p>Объявление массива:</p>
+    <pre>
+        тип[] имя_массива = new тип[размер] {значение}
+    </pre>
+    <p>Пример:</p>
+    <pre>
+        int[] array = new int[5] {1,2,3,4,5}
+    </pre>
+    <p>Разновидности объявлений массива:</p>
+    <pre>
+        int[] array = new int[]
+        int[] array = {1,2,3,4,5}
+        int[] array = new int[5]
+        int[] array = new int[5] {1,2,3,4,5}
+    </pre>
+    <p>Перебор массива через цикл for</p>
+    <pre>
+        int[] array = new int[5] {1,2,3,4,5}
+        for(int i = 0; i < 5); i++) {
+            Console.WriteLine($"array[{i}] = {array[i]}")
+        }
+    </pre>
     <footer>
         <a href="index.html">
             <div class="exit">
