--- a/massiv.html
+++ b/massiv.html
@@ -4,34 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Все о массиве</title>
+    <title>Все о одномерном | двухмерном массиве</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">Все о массиве</h1>
-    <p><b>Массив</b> предоставляет собой совокупность переменных одного типа с обшим для обращения к ним именем.</p>
-    <p>Объявление массива:</p>
-    <pre>
+    <h1 align="center">Все о одномерном | двухмерном массиве</h1>
+    <div class="main">
+        <div class="massiv1">
+            <h2>Одномерный массив</h2>
+            <p><b>Массив</b> предоставляет собой совокупность переменных одного типа с обшим для обращения к ним именем.</p>
+            <p>Объявление массива:</p>
+            <pre>
         тип[] имя_массива = new тип[размер] {значение}
-    </pre>
-    <p>Пример:</p>
-    <pre>
+            </pre>
+            <p>Пример:</p>
+            <pre>
         int[] array = new int[5] {1,2,3,4,5}
-    </pre>
-    <p>Разновидности объявлений массива:</p>
-    <pre>
+            </pre>
+            <p>Разновидности объявлений массива:</p>
+            <pre>
         int[] array = new int[]
         int[] array = {1,2,3,4,5}
         int[] array = new int[5]
         int[] array = new int[5] {1,2,3,4,5}
-    </pre>
-    <p>Перебор массива через цикл for</p>
-    <pre>
+            </pre>
+            <p>Перебор массива через цикл for</p>
+            <pre>
         int[] array = new int[5] {1,2,3,4,5}
         for(int i = 0; i < 5); i++) {
             Console.WriteLine($"array[{i}] = {array[i]}")
         }
-    </pre>
+            </pre>
+            <p>название_массива.lenght - длина массива </p>
+        </div>
+        <div class="massiv2">
+            <h2>Двухмерный массив</h2>
+        </div>
+    </div>
     <footer>
         <a href="index.html">
             <div class="exit">
