--- a/operation.html
+++ b/operation.html
@@ -69,7 +69,7 @@
         }
     </pre>
     <p>инициализация - объявление и описание переменной</p>
-    <div class="op">
+    <div class="main">
         <div class="while">
             <h3>WHILE</h3>
         <pre>
