--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="arif.html"><h2>4. Арифметические операции |  Логические операции</h2></a>
     <a href="math.html"><h2>5. Матиматические вычесления</h2></a>
     <a href="operation.html"><h2>6. Операторы</h2></a>
-    <a href="massiv.html"><h2>7. Все о массиве</h2></a>
+    <a href="massiv.html"><h2>7. Все о одномерном | двухмерном массиве</h2></a>
     <a href="random.html"><h2>8. Рандомные числа</h2></a>
     <a href="Sorts.html"><h2>9. Сортировки массива</h2></a>
     <a href=""><h2>10.</h2></a>
