Что-то да сделала

--- a/index.html
+++ b/index.html
@@ -9,15 +9,38 @@
 </head>
 <body>
     <h1 align="center">Курс по C#</h1>
-    <a href="type.html"><h2>1. Типы данных</h2></a>
-    <a href="workconsole.html"><h2>2. Работы с консолью | Оформление консоли</h2></a>
-    <a href="ups.html"><h2>3. УПС (управляющие последовательности символов)</h2></a>
-    <a href="arif.html"><h2>4. Арифметические операции |  Логические операции</h2></a>
-    <a href="math.html"><h2>5. Матиматические вычесления</h2></a>
-    <a href="operation.html"><h2>6. Операторы</h2></a>
-    <a href="massiv.html"><h2>7. Все о одномерном | двухмерном массиве</h2></a>
-    <a href="random.html"><h2>8. Рандомные числа</h2></a>
-    <a href="Sorts.html"><h2>9. Сортировки массива</h2></a>
-    <a href=""><h2>10.</h2></a>
+    <div class="box">
+        <div class="main">
+            <div class="page1-1">
+                <a href="type.html"><h2>1. Типы данных</h2></a>
+                <a href="workconsole.html"><h2>2. Работы с консолью | Оформление консоли</h2></a>
+                <a href="ups.html"><h2>3. УПС (управляющие последовательности символов)</h2></a>
+                <a href="arif.html"><h2>4. Арифметические операции |  Логические операции</h2></a>
+                <a href="math.html"><h2>5. Матиматические вычесления</h2></a>
+                <a href="operation.html"><h2>6. Операторы</h2></a>
+                <a href="massiv.html"><h2>7. Все о одномерном | двухмерном массиве</h2></a>
+                <a href="random.html"><h2>8. Рандомные числа</h2></a>
+                <a href="Sorts.html"><h2>9. Сортировки массива</h2></a>
+                <a href="list.html"><h2>10. Работа с классом List | Динамические массивы</h2></a>
+            </div>
+            <div class="page1-2">
+                <a href="function.html"><h2>11. Функции | Методы класса</h2></a>
+                <a href=""><h2>12.</h2></a>
+                <a href=""><h2>13.</h2></a>
+                <a href=""><h2>14.</h2></a>
+                <a href=""><h2>15.</h2></a>
+                <a href=""><h2>16.</h2></a>
+                <a href=""><h2>17.</h2></a>
+                <a href=""><h2>18.</h2></a>
+                <a href=""><h2>19.</h2></a>
+                <a href=""><h2>20.</h2></a>
+            </div>
+        </div>
+        <div class="number_page">
+            <a href="index.html">1</a>
+            <a href="index2.html">2</a>
+            <a href="index3.html">3</a>
+        </div>
+    </div>
 </body>
 </html>
