--- a/massiv.html
+++ b/massiv.html
@@ -38,8 +38,42 @@
             <p>название_массива.lenght - длина массива </p>
         </div>
         <div class="massiv2">
-            <h2>Двухмерный массив</h2>
+            <h2>Двухмерный массив | Матрица</h2>
+            <p>Матрица - это массив, в котором каждый элемент имеет два индекса (номер строки и номер столбца).</p>
+            <p>Объявление двухмерного массива:</p>
+            <pre>
+        int[,] A = new int[4,3] {
+            {-9, -6, -3},
+            {1, 2, 3},
+            {4, 5, 6},
+            {7, 8, 9}
+        };
+            </pre>
+            <p>Описание массива:</p>
+            <pre>
+        Random r = new Random()
+        for(int i=0; i < 4; i++){
+            for(int j=0; i < 3; i++){
+                A[i,j]=r.Next(0,10);
+            }
+        }
+            </pre>
+            <p>Вывод матрицы:</p>
+            <pre>
+        for(int i=0; i < 4; i++){
+            for(int j=0; i < 3; i++){
+                if(j!=3-1){
+                    Console.Write(A[i,j] + "\t");
+                }
+                else{
+                    Console.Write(A[i,j]);
+                }
+            }
+            Console.WriteLine();
+        }
+            </pre>
         </div>
+
     </div>
     <footer>
         <a href="index.html">
