--- a/operation.html
+++ b/operation.html
@@ -104,6 +104,20 @@
             <p>do while выполниться хотя бы один раз</p>
         </div>
     </div>
+    <h3>FOREACH</h3>
+    <pre>
+        foreach(объявление_переменной in название_массива){
+            тело цикла
+        }
+    </pre>
+    <p>Пример:</p>
+    <pre>
+        int[] array = new int[5] {1,2,3,4,5}
+        foreach(int el in array){
+            Console.WriteLine("EL:" + el);
+        }
+    </pre>
+    <p>Цикл FOREACH удобно использовать, чтобы перебрать многомерный массив</p>
     <footer>
         <a href="index.html">
             <div class="exit">
