--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </div>
             <div class="page1-2">
                 <a href="function.html"><h2>11. Функции | Методы класса</h2></a>
-                <a href=""><h2>12.</h2></a>
-                <a href=""><h2>13.</h2></a>
+                <a href=""><h2>12. Работы с файлами и строками</h2></a>
+                <a href=""><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
                 <a href=""><h2>14.</h2></a>
                 <a href=""><h2>15.</h2></a>
                 <a href=""><h2>16.</h2></a>
