--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
         </div>
         <div class="number_page">
             <a href="index.html">1</a>
-            <a href="index2.html">2</a>
+            <a class="active" href="index2.html">2</a>
             <a href="index3.html">3</a>
         </div>
     </div>
