--- a/index3.html
+++ b/index3.html
@@ -39,7 +39,7 @@
         <div class="number_page">
             <a href="index.html">1</a>
             <a href="index2.html">2</a>
-            <a href="index3.html">3</a>
+            <a class="active" href="index3.html">3</a>
         </div>
     </div>
 </body>
