--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div>
             <div class="page1-2">
                 <a href="function.html"><h2>11. Функции | Методы класса</h2></a>
-                <a href=""><h2>12. Работы с файлами и строками</h2></a>
-                <a href=""><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
-                <a href=""><h2>14.</h2></a>
-                <a href=""><h2>15.</h2></a>
-                <a href=""><h2>16.</h2></a>
+                <a href="file_and_string.html"><h2>12. Работа с файлами и строками</h2></a>
+                <a href="try-catch.html"><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
+                <a href="class.html"><h2>14. Создание классов и объектов</h2></a>
+                <a href=""><h2>15. Конструктор классов | Модификатор static</h2></a>
+                <a href=""><h2>16. </h2></a>
                 <a href=""><h2>17.</h2></a>
                 <a href=""><h2>18.</h2></a>
                 <a href=""><h2>19.</h2></a>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="number_page">
-            <a href="index.html">1</a>
+            <a class="active" href="index.html">1</a>
             <a href="index2.html">2</a>
             <a href="index3.html">3</a>
         </div>
