--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="file_and_string.html"><h2>12. Работа с файлами и строками</h2></a>
                 <a href="try-catch.html"><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
                 <a href="class.html"><h2>14. Создание классов и объектов</h2></a>
-                <a href=""><h2>15. Конструктор классов | Модификатор static</h2></a>
+                <a href="designer.html"><h2>15. Конструктор классов | Модификатор static</h2></a>
                 <a href=""><h2>16. </h2></a>
                 <a href=""><h2>17.</h2></a>
                 <a href=""><h2>18.</h2></a>
