--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
                 <a href="random.html"><h2>8. Рандомные числа</h2></a>
                 <a href="Sorts.html"><h2>9. Сортировки массива</h2></a>
                 <a href="list.html"><h2>10. Работа с классом List | Динамические массивы</h2></a>
-            </div>
-            <div class="page1-2">
                 <a href="function.html"><h2>11. Функции | Методы класса</h2></a>
                 <a href="file_and_string.html"><h2>12. Работа с файлами и строками</h2></a>
                 <a href="try-catch.html"><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
+            </div>
+            <div class="page1-2">
                 <a href="class.html"><h2>14. Создание классов и объектов</h2></a>
                 <a href="designer.html"><h2>15. Конструктор классов | Модификатор static</h2></a>
-                <a href=""><h2>16. </h2></a>
-                <a href=""><h2>17.</h2></a>
+                <a href="this.html"><h2>16. Указатель "this" в классах</h2></a>
+                <a href="acsessors.html"><h2>17. Аксессоры «get» и «set»</h2></a>
                 <a href=""><h2>18.</h2></a>
                 <a href=""><h2>19.</h2></a>
                 <a href=""><h2>20.</h2></a>
+                <a href=""><h2>21.</h2></a>
+                <a href=""><h2>22.</h2></a>
+                <a href=""><h2>23.</h2></a>
+                <a href=""><h2>24.</h2></a>
+                <a href=""><h2>25.</h2></a>
             </div>
         </div>
         <div class="number_page">
-            <a class="active" href="index.html">1</a>
-            <a href="index2.html">2</a>
+            <a class="active" href="index.html">Курс по C#</a>
+            <a href="index2.html">Курс по WPF и XAML</a>
             <a href="index3.html">3</a>
         </div>
     </div>
