--- a/index3.html
+++ b/index3.html
@@ -12,33 +12,33 @@
     <div class="box">
         <div class="main">
             <div class="page1-1">
-                <a href=""><h2>41.</h2></a>
-                <a href=""><h2>42.</h2></a>
-                <a href=""><h2>43.</h2></a>
-                <a href=""><h2>44.</h2></a>
-                <a href=""><h2>45.</h2></a>
-                <a href=""><h2>46.</h2></a>
-                <a href=""><h2>47.</h2></a>
-                <a href=""><h2>48.</h2></a>
-                <a href=""><h2>49.</h2></a>
-                <a href=""><h2>50.</h2></a>
+                <a href=""><h2>1.</h2></a>
+                <a href=""><h2>2.</h2></a>
+                <a href=""><h2>3.</h2></a>
+                <a href=""><h2>4.</h2></a>
+                <a href=""><h2>5.</h2></a>
+                <a href=""><h2>6.</h2></a>
+                <a href=""><h2>7.</h2></a>
+                <a href=""><h2>8.</h2></a>
+                <a href=""><h2>9.</h2></a>
+                <a href=""><h2>10.</h2></a>
             </div>
             <div class="page1-2">
-                <a href=""><h2>51.</h2></a>
-                <a href=""><h2>52.</h2></a>
-                <a href=""><h2>53.</h2></a>
-                <a href=""><h2>54.</h2></a>
-                <a href=""><h2>55.</h2></a>
-                <a href=""><h2>56.</h2></a>
-                <a href=""><h2>57.</h2></a>
-                <a href=""><h2>58.</h2></a>
-                <a href=""><h2>59.</h2></a>
-                <a href=""><h2>60.</h2></a>
+                <a href=""><h2>11.</h2></a>
+                <a href=""><h2>12.</h2></a>
+                <a href=""><h2>13.</h2></a>
+                <a href=""><h2>14.</h2></a>
+                <a href=""><h2>15.</h2></a>
+                <a href=""><h2>16.</h2></a>
+                <a href=""><h2>17.</h2></a>
+                <a href=""><h2>18.</h2></a>
+                <a href=""><h2>19.</h2></a>
+                <a href=""><h2>20.</h2></a>
             </div>
         </div>
         <div class="number_page">
-            <a href="index.html">1</a>
-            <a href="index2.html">2</a>
+            <a href="index.html">Курс по C#</a>
+            <a href="index2.html">Курс по WPF и XAML</a>
             <a class="active" href="index3.html">3</a>
         </div>
     </div>
