--- a/index2.html
+++ b/index2.html
@@ -8,37 +8,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">Курс по C#</h1>
+    <h1 align="center">Курс по WPF и XAML</h1>
     <div class="box">
         <div class="main">
             <div class="page1-1">
+                <a href=""><h2>1. Типы данных</h2></a>
+                <a href=""><h2>2. Работы с консолью | Оформление консоли</h2></a>
+                <a href=""><h2>3. УПС (управляющие последовательности символов)</h2></a>
+                <a href=""><h2>4. Арифметические операции |  Логические операции</h2></a>
+                <a href=""><h2>5. Матиматические вычесления</h2></a>
+                <a href=""><h2>6. Операторы</h2></a>
+                <a href=""><h2>7. Все о одномерном | двухмерном массиве</h2></a>
+                <a href=""><h2>8. Рандомные числа</h2></a>
+                <a href=""><h2>9. Сортировки массива</h2></a>
+                <a href=""><h2>10. Работа с классом List | Динамические массивы</h2></a>
+                <a href=""><h2>11. Функции | Методы класса</h2></a>
+                <a href=""><h2>12. Работа с файлами и строками</h2></a>
+                <a href=""><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
+            </div>
+            <div class="page1-2">
+                <a href=""><h2>14. Создание классов и объектов</h2></a>
+                <a href=""><h2>15. Конструктор классов | Модификатор static</h2></a>
+                <a href=""><h2>16. Указатель "this" в классах</h2></a>
+                <a href=""><h2>17. Аксессоры «get» и «set»</h2></a>
+                <a href=""><h2>18.</h2></a>
+                <a href=""><h2>19.</h2></a>
+                <a href=""><h2>20.</h2></a>
                 <a href=""><h2>21.</h2></a>
                 <a href=""><h2>22.</h2></a>
                 <a href=""><h2>23.</h2></a>
                 <a href=""><h2>24.</h2></a>
                 <a href=""><h2>25.</h2></a>
-                <a href=""><h2>26.</h2></a>
-                <a href=""><h2>27.</h2></a>
-                <a href=""><h2>28.</h2></a>
-                <a href=""><h2>29.</h2></a>
-                <a href=""><h2>30.</h2></a>
-            </div>
-            <div class="page1-2">
-                <a href=""><h2>31.</h2></a>
-                <a href=""><h2>32.</h2></a>
-                <a href=""><h2>33.</h2></a>
-                <a href=""><h2>34.</h2></a>
-                <a href=""><h2>35.</h2></a>
-                <a href=""><h2>36.</h2></a>
-                <a href=""><h2>37.</h2></a>
-                <a href=""><h2>38.</h2></a>
-                <a href=""><h2>39.</h2></a>
-                <a href=""><h2>40.</h2></a>
             </div>
         </div>
         <div class="number_page">
             <a href="index.html">1</a>
-            <a class="active" href="index2.html">2</a>
+            <a class="active" href="index2.html">Курс по WPF и XAML</a>
             <a href="index3.html">3</a>
         </div>
     </div>
