--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="number_page">
             <a class="active" href="index.html">Курс по C#</a>
             <a href="index2.html">Курс по WPF и XAML</a>
-            <a href="index3.html">3</a>
+            <a href="books.html">Книги</a>
         </div>
     </div>
 </body>
