--- a/index2.html
+++ b/index2.html
@@ -12,25 +12,25 @@
     <div class="box">
         <div class="main">
             <div class="page1-1">
-                <a href=""><h2>1. Типы данных</h2></a>
-                <a href=""><h2>2. Работы с консолью | Оформление консоли</h2></a>
-                <a href=""><h2>3. УПС (управляющие последовательности символов)</h2></a>
-                <a href=""><h2>4. Арифметические операции |  Логические операции</h2></a>
-                <a href=""><h2>5. Матиматические вычесления</h2></a>
-                <a href=""><h2>6. Операторы</h2></a>
-                <a href=""><h2>7. Все о одномерном | двухмерном массиве</h2></a>
-                <a href=""><h2>8. Рандомные числа</h2></a>
-                <a href=""><h2>9. Сортировки массива</h2></a>
-                <a href=""><h2>10. Работа с классом List | Динамические массивы</h2></a>
-                <a href=""><h2>11. Функции | Методы класса</h2></a>
-                <a href=""><h2>12. Работа с файлами и строками</h2></a>
-                <a href=""><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
+                <a href=""><h2>1.</h2></a>
+                <a href=""><h2>2.</h2></a>
+                <a href=""><h2>3.</h2></a>
+                <a href=""><h2>4.</h2></a>
+                <a href=""><h2>5.</h2></a>
+                <a href=""><h2>6.</h2></a>
+                <a href=""><h2>7.</h2></a>
+                <a href=""><h2>8.</h2></a>
+                <a href=""><h2>9.</h2></a>
+                <a href=""><h2>10.</h2></a>
+                <a href=""><h2>11.</h2></a>
+                <a href=""><h2>12.</h2></a>
+                <a href=""><h2>13.</h2></a>
             </div>
             <div class="page1-2">
-                <a href=""><h2>14. Создание классов и объектов</h2></a>
-                <a href=""><h2>15. Конструктор классов | Модификатор static</h2></a>
-                <a href=""><h2>16. Указатель "this" в классах</h2></a>
-                <a href=""><h2>17. Аксессоры «get» и «set»</h2></a>
+                <a href=""><h2>14.</h2></a>
+                <a href=""><h2>15.</h2></a>
+                <a href=""><h2>16.</h2></a>
+                <a href=""><h2>17.</h2></a>
                 <a href=""><h2>18.</h2></a>
                 <a href=""><h2>19.</h2></a>
                 <a href=""><h2>20.</h2></a>
@@ -42,9 +42,9 @@
             </div>
         </div>
         <div class="number_page">
-            <a href="index.html">1</a>
+            <a href="index.html">Курс по C#</a>
             <a class="active" href="index2.html">Курс по WPF и XAML</a>
-            <a href="index3.html">3</a>
+            <a href="index3.html">Книги</a>
         </div>
     </div>
 </body>
