--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="designer.html"><h2>15. Конструктор классов | Модификатор static</h2></a>
                 <a href="this.html"><h2>16. Указатель "this" в классах</h2></a>
                 <a href="acsessors.html"><h2>17. Аксессоры «get» и «set»</h2></a>
-                <a href=""><h2>18.</h2></a>
+                <a href="heritage.html"><h2>18. Наследование классов</h2></a>
                 <a href=""><h2>19.</h2></a>
                 <a href=""><h2>20.</h2></a>
                 <a href=""><h2>21.</h2></a>
