Виртуальные методы. Операторы is и as

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <a href="this.html"><h2>16. Указатель "this" в классах</h2></a>
                 <a href="acsessors.html"><h2>17. Аксессоры «get» и «set»</h2></a>
                 <a href="heritage.html"><h2>18. Наследование классов</h2></a>
-                <a href=""><h2>19.</h2></a>
-                <a href=""><h2>20.</h2></a>
-                <a href=""><h2>21.</h2></a>
+                <a href="is_and_as.html"><h2>19. Операторы is и as. Массив указателей</h2></a>
+                <a href="virtual.html"><h2>20. Виртуальные методы</h2></a>
+                <a href="abstract.html"><h2>21. Абстрактные классы. Абстрактные методы</h2></a>
                 <a href=""><h2>22.</h2></a>
                 <a href=""><h2>23.</h2></a>
                 <a href=""><h2>24.</h2></a>
