--- a/massiv.html
+++ b/massiv.html
@@ -53,7 +53,7 @@
             <pre>
         Random r = new Random()
         for(int i=0; i < 4; i++){
-            for(int j=0; i < 3; i++){
+            for(int j=0; j < 3; j++){
                 A[i,j]=r.Next(0,10);
             }
         }
@@ -61,7 +61,7 @@
             <p>Вывод матрицы:</p>
             <pre>
         for(int i=0; i < 4; i++){
-            for(int j=0; i < 3; i++){
+            for(int j=0; j < 3; j++){
                 if(j!=3-1){
                     Console.Write(A[i,j] + "\t");
                 }
