--- a/function.html
+++ b/function.html
@@ -8,9 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">Функции | Методы класса</h1>
-    <p>Функция находится вне класса, а метод он внутри класса</p>
-    <p>Создание метода, осуществляется внутри класса и не внутри другого метода</p>
+    <h1 align="center">Функции | Методы</h1>
+    <p>Исходные (входные) - это данные, известные перед выполнением задачи из условия.</p>
+    <p>Промежуточные - данные, которые не являются ни аргументом, ни результатом алгоритма, а используются только для обозначение промежуточного значения.</p>
+    <p>Выходные - результат решения задачи.</p>
+    <p>Область видимости переменной - место в программе, в которой доступно значение переменной.</p>
+    <ul style="font-size: 20px;">
+        <li>Локальные переменные доступны конкретной подпрограмме.</li>
+        <li>Глобальные переменные доступны всей программе.</li>
+    </ul>
+    <p>Метод - это часть программы, которая может вызываться в коде основной программы и производить какие-либо действия с переданными в нее переданными.</p>
+    <p>Функция находится вне класса, а метод он внутри класса.</p>
+    <p>Создание метода, осуществляется внутри класса и не внутри другого метода.</p>
+    <p>Методу свойственно явное возвращение результата его работы.</p>
     <p>Объявление метода:</p>
     <pre>
         модификатор_доступа возвращаемый_тип название_метода(принимаемый_тип_данных название_типа_данных){
