--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="random.html"><h2>8. Рандомные числа</h2></a>
                 <a href="Sorts.html"><h2>9. Сортировки массива</h2></a>
                 <a href="list.html"><h2>10. Работа с классом List | Динамические массивы</h2></a>
-                <a href="function.html"><h2>11. Функции | Методы класса</h2></a>
+                <a href="function.html"><h2>11. Функции | Методы</h2></a>
                 <a href="file_and_string.html"><h2>12. Работа с файлами и строками</h2></a>
                 <a href="try-catch.html"><h2>13. Обработчик исключений | Оператор try-catch</h2></a>
             </div>
